test/cases/compile_errors/stage1/slicing_of_global_undefined_pointer.zig
var buf: *[1]u8 = undefined;
export fn entry() void {
    _ = buf[0..1];
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:12: error: non-zero length slice of undefined pointer
